--- a/index.html
+++ b/index.html
@@ -3,22 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Invitaci贸n Ariel & Gisela</title>
+    <title>Invitación Ariel & Gisela</title>
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
         :root { --dorado: #b8926a; --texto: #5a5a5a; --fondo-gris: #f8f8f8; --verde-exito: #76a071; --rojo-error: #c06c6c; }
         * { box-sizing: border-box; }
         body { font-family: 'Montserrat', sans-serif; text-align: center; color: var(--texto); margin: 0; padding: 0; background-color: var(--fondo-gris); }
 
+        /* CAPA GHOST: Captura el toque inicial para activar audio en Android */
+        #ghost-trigger {
+            position: absolute; top: 0; left: 0; width: 100%; height: 90vh; 
+            z-index: 999; cursor: pointer;
+        }
+
         .hero-image {
-            width: 100%;
-            aspect-ratio: 3 / 4; 
-            /* RUTA LOCAL EN GITHUB */
+            width: 100%; aspect-ratio: 3 / 4; 
             background-image: url('foto-casamiento3.jpg'); 
-            background-size: contain; 
-            background-position: center top;
-            background-repeat: no-repeat;
-            background-color: #fff;
+            background-size: contain; background-position: center top;
+            background-repeat: no-repeat; background-color: #fff;
+            position: relative;
         }
 
         .card { background-color: #fff; max-width: 600px; margin: -40px auto 20px; padding: 40px 15px; border-radius: 30px 30px 0 0; box-shadow: 0 4px 15px rgba(0,0,0,0.05); position: relative; z-index: 10; }
@@ -62,12 +65,14 @@
 </head>
 <body>
 
+<div id="ghost-trigger"></div>
+
 <audio id="miMusica" loop preload="auto">
     <source src="musica.mp3" type="audio/mpeg">
 </audio>
 
 <button id="musicBtn" class="music-control">
-    <span id="musicIcon">馃幍</span>
+    <span id="musicIcon">??</span>
 </button>
 
 <div class="hero-image"></div>
@@ -78,7 +83,7 @@
     <div class="contador-container">
         <div class="contador-titulo">Faltan</div>
         <div class="timer">
-            <div class="time-box"><span id="days">0</span><label>D铆as</label></div>
+            <div class="time-box"><span id="days">0</span><label>Días</label></div>
             <div class="time-box"><span id="hours">0</span><label>Horas</label></div>
             <div class="time-box"><span id="minutes">0</span><label>Minutos</label></div>
             <div class="time-box"><span id="seconds">0</span><label>Segundos</label></div>
@@ -87,22 +92,22 @@
 
     <div class="seccion-texto">
         <p>Tenemos el gusto de compartir con ustedes este momento tan importante para nuestras vidas.</p>
-        <div class="historia">"Nuestra historia comenz贸 hace 6 a帽os. Un encuentro, muchas risas, viajes y la certeza de que el mejor destino es caminar la vida juntos."</div>
-        <p>Por eso, hoy elegimos dar un nuevo paso juntos.<br><strong>隆Nos casamos!</strong></p>
+        <div class="historia">"Nuestra historia comenzó hace 6 a?os. Un encuentro, muchas risas, viajes y la certeza de que el mejor destino es caminar la vida juntos."</div>
+        <p>Por eso, hoy elegimos dar un nuevo paso juntos.<br><strong>?Nos casamos!</strong></p>
     </div>
 
     <div class="info-boda">
         <div class="info-item">
             <span class="info-label">Ceremonia</span>
-            <span class="info-value">El Rosedal</span>
-            <span class="info-sub">Horario: 12:00 | Direcci贸n: Isabel Infanta Av. 555</span>
-            <a href="https://maps.google.com" target="_blank" class="map-link">馃搷 Ver mapa</a>
+            <span class="info-value">El Rosedal de Palermo</span>
+            <span class="info-sub">Horario: 12:00 | Dirección: Av. Infanta Isabel 555</span>
+            <a href="https://www.google.com/maps/search/?api=1&query=Parque+El+Rosedal+Palermo+Buenos+Aires" target="_blank" class="map-link">?? Ver mapa</a>
         </div>
         <div class="info-item">
-            <span class="info-label">Celebraci贸n - Almuerzo</span>
+            <span class="info-label">Celebración - Almuerzo</span>
             <span class="info-value">Selquet</span>
-            <span class="info-sub">Horario: 13:00 | Direcci贸n: Figueroa Alcorta 6402</span>
-            <a href="https://maps.google.com" target="_blank" class="map-link">馃搷 Ver mapa</a>
+            <span class="info-sub">Horario: 13:00 | Dirección: Figueroa Alcorta 6402</span>
+            <a href="https://www.google.com/maps/search/?api=1&query=Selquet+Figueroa+Alcorta+6402+Buenos+Aires" target="_blank" class="map-link">?? Ver mapa</a>
         </div>
         <div class="info-item">
             <span class="info-label">Dress Code</span>
@@ -112,17 +117,17 @@
     </div>
 
     <div class="confirmacion">
-        <p><strong>Busc谩 tu nombre y confirm谩:</strong></p>
+        <p><strong>Buscá tu nombre y confirmá:</strong></p>
         <div id="searchSection">
-            <input type="text" id="guestSearch" placeholder="Escrib铆 tu nombre..." style="width:100%; padding:15px; margin-bottom:10px; text-align:center;">
+            <input type="text" id="guestSearch" placeholder="Escribí tu nombre..." style="width:100%; padding:15px; margin-bottom:10px; text-align:center;">
             <button class="btn-buscar" onclick="buscar()">Buscar</button>
         </div>
         <div id="resultsArea" class="hidden"><div id="listContainer"></div></div>
         <div id="confirmacionArea" class="hidden">
-            <p>Hola <strong><span id="selectedName"></span></strong>,<br>驴c贸mo nos acompa帽ar谩s?</p>
-            <button class="btn-verde" onclick="enviarRespuesta('civil')">S贸lo al Civil</button>
+            <p>Hola <strong><span id="selectedName"></span></strong>,<br>?cómo nos acompa?arás?</p>
+            <button class="btn-verde" onclick="enviarRespuesta('civil')">Sólo al Civil</button>
             <button class="btn-verde" onclick="enviarRespuesta('almuerzo')">Civil y Almuerzo</button>
-            <button class="btn-rojo" onclick="enviarRespuesta('no')">No asistir茅</button>
+            <button class="btn-rojo" onclick="enviarRespuesta('no')">No asistiré</button>
         </div>
         <p id="msg" style="font-weight: bold; color: var(--dorado);"></p>
     </div>
@@ -131,7 +136,7 @@
         <p><strong>Si desean hacernos un regalo:</strong></p>
         <div class="cbu-box">Santander Rio | CBU: 0720762688000001354490<br>Alias: <strong>ESPADA.PALETA.LASTRE</strong></div>
     </div>
-    <div class="pie">Para esta ocasi贸n tan especial, hemos decidido celebrar en un ambiente s贸lo para adultos. Gracias por acompa帽arnos.</div>
+    <div class="pie">Para esta ocasión tan especial, hemos decidido celebrar en un ambiente sólo para adultos. Gracias por acompa?arnos.</div>
 </div>
 
 <script>
@@ -141,41 +146,28 @@
     const audio = document.getElementById("miMusica");
     const musicBtn = document.getElementById("musicBtn");
     const musicIcon = document.getElementById("musicIcon");
+    const ghost = document.getElementById("ghost-trigger");
 
-    // L脫GICA DE ACTIVACI脫N AGRESIVA (Para que el primer toque inicie el audio)
-    const intentarReproducir = () => {
+    const activarMusica = () => {
         if (audio.paused) {
-            if (audio.currentTime === 0) {
-                audio.currentTime = 45; 
-            }
-            
+            if (audio.currentTime === 0) { audio.currentTime = 45; }
             audio.play().then(() => {
-                musicIcon.innerHTML = "馃攪";
-                removerListeners();
+                musicIcon.innerHTML = "??";
+                if(ghost) ghost.remove();
             }).catch(() => {});
         }
     };
 
-    const removerListeners = () => {
-        ['click', 'touchstart', 'pointerdown'].forEach(event => {
-            document.removeEventListener(event, intentarReproducir);
-        });
-    };
-
-    // Escuchamos el pointerdown: se dispara apenas apoy谩s el dedo para el scroll
-    ['click', 'touchstart', 'pointerdown'].forEach(event => {
-        document.addEventListener(event, intentarReproducir, { passive: true });
-    });
+    ghost.addEventListener("touchstart", activarMusica, { once: true });
+    ghost.addEventListener("mousedown", activarMusica, { once: true });
 
     musicBtn.addEventListener("click", (e) => {
         e.stopPropagation();
         if (audio.paused) {
-            audio.play(); 
-            musicIcon.innerHTML = "馃攪";
-            removerListeners();
+            audio.play(); musicIcon.innerHTML = "??";
+            if(ghost) ghost.remove();
         } else {
-            audio.pause(); 
-            musicIcon.innerHTML = "馃幍";
+            audio.pause(); musicIcon.innerHTML = "??";
         }
     });
 
@@ -206,6 +198,7 @@
                     document.getElementById('selectedName').innerText = n;
                     document.getElementById('resultsArea').classList.add('hidden');
                     document.getElementById('confirmacionArea').classList.remove('hidden');
+                    activarMusica();
                 };
                 container.appendChild(d);
             });
@@ -219,7 +212,7 @@
         try {
             await fetch(`${WEB_APP_URL}?action=confirmar&nombre=${encodeURIComponent(nombreSeleccionado)}&opcion=${opcion}`);
             document.getElementById('confirmacionArea').classList.add('hidden');
-            document.getElementById('msg').innerText = "隆Confirmado!";
+            document.getElementById('msg').innerText = "?Confirmado!";
         } catch(e) { document.getElementById('msg').innerText = "Error."; }
     }
 </script>
