--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Invitaci®Æn Ariel & Gisela</title>
+    <title>InvitaciËªän Ariel & Gisela</title>
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
         :root { --dorado: #b8926a; --texto: #5a5a5a; --fondo-gris: #f8f8f8; --verde-exito: #76a071; --rojo-error: #c06c6c; }
@@ -83,7 +83,7 @@
     <div class="contador-container">
         <div class="contador-titulo">Faltan</div>
         <div class="timer">
-            <div class="time-box"><span id="days">0</span><label>D®™as</label></div>
+            <div class="time-box"><span id="days">0</span><label>DËµ§as</label></div>
             <div class="time-box"><span id="hours">0</span><label>Horas</label></div>
             <div class="time-box"><span id="minutes">0</span><label>Minutos</label></div>
             <div class="time-box"><span id="seconds">0</span><label>Segundos</label></div>
@@ -92,7 +92,7 @@
 
     <div class="seccion-texto">
         <p>Tenemos el gusto de compartir con ustedes este momento tan importante para nuestras vidas.</p>
-        <div class="historia">"Nuestra historia comenz®Æ hace 6 a?os. Un encuentro, muchas risas, viajes y la certeza de que el mejor destino es caminar la vida juntos."</div>
+        <div class="historia">"Nuestra historia comenzËªä hace 6 a?os. Un encuentro, muchas risas, viajes y la certeza de que el mejor destino es caminar la vida juntos."</div>
         <p>Por eso, hoy elegimos dar un nuevo paso juntos.<br><strong>?Nos casamos!</strong></p>
     </div>
 
@@ -100,13 +100,13 @@
         <div class="info-item">
             <span class="info-label">Ceremonia</span>
             <span class="info-value">El Rosedal de Palermo</span>
-            <span class="info-sub">Horario: 12:00 | Direcci®Æn: Av. Infanta Isabel 555</span>
+            <span class="info-sub">Horario: 12:00 | DirecciËªän: Av. Infanta Isabel 555</span>
             <a href="https://www.google.com/maps/search/?api=1&query=Parque+El+Rosedal+Palermo+Buenos+Aires" target="_blank" class="map-link">?? Ver mapa</a>
         </div>
         <div class="info-item">
-            <span class="info-label">Celebraci®Æn - Almuerzo</span>
+            <span class="info-label">CelebraciËªän - Almuerzo</span>
             <span class="info-value">Selquet</span>
-            <span class="info-sub">Horario: 13:00 | Direcci®Æn: Figueroa Alcorta 6402</span>
+            <span class="info-sub">Horario: 13:00 | DirecciËªän: Figueroa Alcorta 6402</span>
             <a href="https://www.google.com/maps/search/?api=1&query=Selquet+Figueroa+Alcorta+6402+Buenos+Aires" target="_blank" class="map-link">?? Ver mapa</a>
         </div>
         <div class="info-item">
@@ -117,17 +117,17 @@
     </div>
 
     <div class="confirmacion">
-        <p><strong>Busc®¢ tu nombre y confirm®¢:</strong></p>
+        <p><strong>BuscËäç tu nombre y confirmËäç:</strong></p>
         <div id="searchSection">
-            <input type="text" id="guestSearch" placeholder="Escrib®™ tu nombre..." style="width:100%; padding:15px; margin-bottom:10px; text-align:center;">
+            <input type="text" id="guestSearch" placeholder="EscribËµ§ tu nombre..." style="width:100%; padding:15px; margin-bottom:10px; text-align:center;">
             <button class="btn-buscar" onclick="buscar()">Buscar</button>
         </div>
         <div id="resultsArea" class="hidden"><div id="listContainer"></div></div>
         <div id="confirmacionArea" class="hidden">
-            <p>Hola <strong><span id="selectedName"></span></strong>,<br>?c®Æmo nos acompa?ar®¢s?</p>
-            <button class="btn-verde" onclick="enviarRespuesta('civil')">S®Ælo al Civil</button>
+            <p>Hola <strong><span id="selectedName"></span></strong>,<br>?cËªämo nos acompa?arËäçs?</p>
+            <button class="btn-verde" onclick="enviarRespuesta('civil')">SËªälo al Civil</button>
             <button class="btn-verde" onclick="enviarRespuesta('almuerzo')">Civil y Almuerzo</button>
-            <button class="btn-rojo" onclick="enviarRespuesta('no')">No asistir®¶</button>
+            <button class="btn-rojo" onclick="enviarRespuesta('no')">No asistirË∞∑</button>
         </div>
         <p id="msg" style="font-weight: bold; color: var(--dorado);"></p>
     </div>
@@ -136,7 +136,7 @@
         <p><strong>Si desean hacernos un regalo:</strong></p>
         <div class="cbu-box">Santander Rio | CBU: 0720762688000001354490<br>Alias: <strong>ESPADA.PALETA.LASTRE</strong></div>
     </div>
-    <div class="pie">Para esta ocasi®Æn tan especial, hemos decidido celebrar en un ambiente s®Ælo para adultos. Gracias por acompa?arnos.</div>
+    <div class="pie">Para esta ocasiËªän tan especial, hemos decidido celebrar en un ambiente sËªälo para adultos. Gracias por acompa?arnos.</div>
 </div>
 
 <script>
