--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Invitaci車n Ariel & Gisela</title>
+    <title>Invitación Ariel & Gisela</title>
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
         :root { --dorado: #b8926a; --texto: #5a5a5a; --fondo-gris: #f8f8f8; --verde-exito: #76a071; --rojo-error: #c06c6c; }
@@ -39,7 +39,6 @@
         }
 
         .contador-container { margin: 20px 0; }
-        .contador-titulo { font-family: 'Great Vibes', cursive; font-size: 2.5rem; color: var(--dorado); }
         .timer { display: flex; justify-content: center; gap: 8px; margin-top: 10px; }
         .time-box { background: #fff; border: 1px solid #f0e6db; padding: 10px; min-width: 70px; border-radius: 10px; }
         .time-box span { display: block; font-size: 1.4rem; font-weight: 600; color: var(--dorado); }
@@ -48,18 +47,11 @@
         .info-boda { margin: 35px 0; border-top: 1px solid #f2f2f2; border-bottom: 1px solid #f2f2f2; padding: 25px 10px; }
         .info-item { margin-bottom: 30px; }
         .info-label { display: block; font-family: 'Great Vibes', cursive; font-size: 2.5rem; color: var(--dorado); line-height: 1.2; }
-        .info-value { display: block; font-weight: 600; font-size: 1.1rem; }
-        .info-sub { display: block; font-size: 0.9rem; }
         .map-link { display: inline-block; color: var(--dorado); text-decoration: none; font-size: 0.85rem; margin-top: 8px; border-bottom: 1px solid var(--dorado); font-weight: 600; }
 
         .confirmacion { border: 1px solid #e0c3a0; padding: 25px 15px; background: #fffdfb; }
         button { width: 100%; border: none; padding: 16px; cursor: pointer; font-size: 0.9rem; text-transform: uppercase; font-weight: 600; margin-bottom: 10px; border-radius: 4px; }
         .btn-buscar { background: var(--dorado); color: white; }
-        .btn-verde { background: var(--verde-exito); color: white; }
-        .btn-rojo { background: var(--rojo-error); color: white; }
-        .regalos { background: #fdfaf6; padding: 30px 20px; margin-top: 40px; }
-        .cbu-box { background: white; border: 2px dashed var(--dorado); padding: 20px; font-size: 0.85rem; }
-        .pie { font-size: 0.95rem; margin: 40px 0; padding: 0 15px; }
         .hidden { display: none; }
     </style>
 </head>
@@ -72,7 +64,7 @@
 </audio>
 
 <button id="musicBtn" class="music-control">
-    <span id="musicIcon">??</span>
+    <span id="musicIcon">🎵</span>
 </button>
 
 <div class="hero-image"></div>
@@ -81,9 +73,9 @@
     <div class="fecha-top">13 de Marzo de 2026</div>
     
     <div class="contador-container">
-        <div class="contador-titulo">Faltan</div>
+        <div style="font-family:'Great Vibes'; font-size:2.5rem; color:var(--dorado);">Faltan</div>
         <div class="timer">
-            <div class="time-box"><span id="days">0</span><label>D赤as</label></div>
+            <div class="time-box"><span id="days">0</span><label>Días</label></div>
             <div class="time-box"><span id="hours">0</span><label>Horas</label></div>
             <div class="time-box"><span id="minutes">0</span><label>Minutos</label></div>
             <div class="time-box"><span id="seconds">0</span><label>Segundos</label></div>
@@ -92,42 +84,42 @@
 
     <div class="seccion-texto">
         <p>Tenemos el gusto de compartir con ustedes este momento tan importante para nuestras vidas.</p>
-        <div class="historia">"Nuestra historia comenz車 hace 6 a?os. Un encuentro, muchas risas, viajes y la certeza de que el mejor destino es caminar la vida juntos."</div>
-        <p>Por eso, hoy elegimos dar un nuevo paso juntos.<br><strong>?Nos casamos!</strong></p>
+        <div class="historia">"Nuestra historia comenzó hace 6 años. Un encuentro, muchas risas, viajes y la certeza de que el mejor destino es caminar la vida juntos."</div>
+        <p>Por eso, hoy elegimos dar un nuevo paso juntos.<br><strong>¡Nos casamos!</strong></p>
     </div>
 
     <div class="info-boda">
         <div class="info-item">
             <span class="info-label">Ceremonia</span>
-            <span class="info-value">El Rosedal de Palermo</span>
-            <span class="info-sub">Horario: 12:00 | Direcci車n: Av. Infanta Isabel 555</span>
-            <a href="https://www.google.com/maps/search/?api=1&query=Parque+El+Rosedal+Palermo+Buenos+Aires" target="_blank" class="map-link">?? Ver mapa</a>
+            <span style="font-weight:600; font-size:1.1rem; display:block;">El Rosedal de Palermo</span>
+            <span style="font-size:0.9rem; display:block;">Horario: 12:00 | Dirección: Av. Infanta Isabel 555</span>
+            <a href="https://www.google.com/maps/search/?api=1&query=El+Rosedal+de+Palermo" target="_blank" class="map-link">📍 Ver mapa</a>
         </div>
         <div class="info-item">
-            <span class="info-label">Celebraci車n - Almuerzo</span>
-            <span class="info-value">Selquet</span>
-            <span class="info-sub">Horario: 13:00 | Direcci車n: Figueroa Alcorta 6402</span>
-            <a href="https://www.google.com/maps/search/?api=1&query=Selquet+Figueroa+Alcorta+6402+Buenos+Aires" target="_blank" class="map-link">?? Ver mapa</a>
+            <span class="info-label">Celebración - Almuerzo</span>
+            <span style="font-weight:600; font-size:1.1rem; display:block;">Selquet</span>
+            <span style="font-size:0.9rem; display:block;">Horario: 13:00 | Dirección: Figueroa Alcorta 6402</span>
+            <a href="https://www.google.com/maps/search/?api=1&query=Selquet+Buenos+Aires" target="_blank" class="map-link">📍 Ver mapa</a>
         </div>
         <div class="info-item">
             <span class="info-label">Dress Code</span>
-            <span class="info-value">Elegante-Sport</span> 
+            <span style="font-weight:600; font-size:1.1rem; display:block;">Elegante-Sport</span> 
         </div>
-        <div class="info-item"><span class="info-label">Fecha del Evento</span><span class="info-value">13/03/2026</span></div>
+        <div class="info-item"><span class="info-label">Fecha del Evento</span><span style="font-weight:600; font-size:1.1rem; display:block;">13/03/2026</span></div>
     </div>
 
     <div class="confirmacion">
-        <p><strong>Busc芍 tu nombre y confirm芍:</strong></p>
+        <p><strong>Buscá tu nombre y confirmá:</strong></p>
         <div id="searchSection">
-            <input type="text" id="guestSearch" placeholder="Escrib赤 tu nombre..." style="width:100%; padding:15px; margin-bottom:10px; text-align:center;">
+            <input type="text" id="guestSearch" placeholder="Escribí tu nombre..." style="width:100%; padding:15px; margin-bottom:10px; text-align:center;">
             <button class="btn-buscar" onclick="buscar()">Buscar</button>
         </div>
         <div id="resultsArea" class="hidden"><div id="listContainer"></div></div>
         <div id="confirmacionArea" class="hidden">
-            <p>Hola <strong><span id="selectedName"></span></strong>,<br>?c車mo nos acompa?ar芍s?</p>
-            <button class="btn-verde" onclick="enviarRespuesta('civil')">S車lo al Civil</button>
-            <button class="btn-verde" onclick="enviarRespuesta('almuerzo')">Civil y Almuerzo</button>
-            <button class="btn-rojo" onclick="enviarRespuesta('no')">No asistir谷</button>
+            <p>Hola <strong><span id="selectedName"></span></strong>,<br>¿cómo nos acompañarás?</p>
+            <button style="background:var(--verde-exito); color:white;" onclick="enviarRespuesta('civil')">Sólo al Civil</button>
+            <button style="background:var(--verde-exito); color:white;" onclick="enviarRespuesta('almuerzo')">Civil y Almuerzo</button>
+            <button style="background:var(--rojo-error); color:white;" onclick="enviarRespuesta('no')">No asistiré</button>
         </div>
         <p id="msg" style="font-weight: bold; color: var(--dorado);"></p>
     </div>
@@ -136,7 +128,7 @@
         <p><strong>Si desean hacernos un regalo:</strong></p>
         <div class="cbu-box">Santander Rio | CBU: 0720762688000001354490<br>Alias: <strong>ESPADA.PALETA.LASTRE</strong></div>
     </div>
-    <div class="pie">Para esta ocasi車n tan especial, hemos decidido celebrar en un ambiente s車lo para adultos. Gracias por acompa?arnos.</div>
+    <div style="font-size:0.95rem; margin:40px 0; padding:0 15px;">Para esta ocasión tan especial, hemos decidido celebrar en un ambiente sólo para adultos. Gracias por acompañarnos.</div>
 </div>
 
 <script>
@@ -152,7 +144,7 @@
         if (audio.paused) {
             if (audio.currentTime === 0) { audio.currentTime = 45; }
             audio.play().then(() => {
-                musicIcon.innerHTML = "??";
+                musicIcon.innerHTML = "🔇";
                 if(ghost) ghost.remove();
             }).catch(() => {});
         }
@@ -164,10 +156,10 @@
     musicBtn.addEventListener("click", (e) => {
         e.stopPropagation();
         if (audio.paused) {
-            audio.play(); musicIcon.innerHTML = "??";
+            audio.play(); musicIcon.innerHTML = "🔇";
             if(ghost) ghost.remove();
         } else {
-            audio.pause(); musicIcon.innerHTML = "??";
+            audio.pause(); musicIcon.innerHTML = "🎵";
         }
     });
 
@@ -212,7 +204,7 @@
         try {
             await fetch(`${WEB_APP_URL}?action=confirmar&nombre=${encodeURIComponent(nombreSeleccionado)}&opcion=${opcion}`);
             document.getElementById('confirmacionArea').classList.add('hidden');
-            document.getElementById('msg').innerText = "?Confirmado!";
+            document.getElementById('msg').innerText = "¡Confirmado!";
         } catch(e) { document.getElementById('msg').innerText = "Error."; }
     }
 </script>
